Fixed contrast issue on main page

--- a/css/outline.css
+++ b/css/outline.css
@@ -2070,8 +2070,8 @@ body.universal-design-home-page {
     position: absolute;
     top: -100px;
     left: 20px;
-    background: var(--primary-color);
-    color: white;
+    background: white;
+    color: rgb(0, 0, 0);
     padding: 12px 24px;
     border-radius: 4px;
     text-decoration: none;
